--- a/l1/kafka/bt2/compose.yml
+++ b/l1/kafka/bt2/compose.yml
@@ -18,6 +18,7 @@ services:
       - "19092:9092"
     volumes:
       - ./kafka_server_jaas.conf:/etc/kafka/kafka_server_jaas.conf
+      - ./zookeeper_jaas.conf:/etc/kafka/zookeeper_jaas.conf
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -35,6 +36,7 @@ services:
       KAFKA_SUPER_USERS: User:admin
 
       KAFKA_OPTS: "-Djava.security.auth.login.config=/etc/kafka/kafka_server_jaas.conf"
+      ZOOKEEPER_OPTS: "-Djava.security.auth.login.config=/etc/kafka/zookeeper_jaas.conf"
 
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
@@ -49,6 +51,7 @@ services:
       - "29092:9092"
     volumes:
       - ./kafka_server_jaas.conf:/etc/kafka/kafka_server_jaas.conf
+      - ./zookeeper_jaas.conf:/etc/kafka/zookeeper_jaas.conf
     environment:
       KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -66,6 +69,7 @@ services:
       KAFKA_SUPER_USERS: User:admin
 
       KAFKA_OPTS: "-Djava.security.auth.login.config=/etc/kafka/kafka_server_jaas.conf"
+      ZOOKEEPER_OPTS: "-Djava.security.auth.login.config=/etc/kafka/zookeeper_jaas.conf"
 
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
@@ -80,6 +84,7 @@ services:
       - "39092:9092"
     volumes:
       - ./kafka_server_jaas.conf:/etc/kafka/kafka_server_jaas.conf
+      - ./zookeeper_jaas.conf:/etc/kafka/zookeeper_jaas.conf
     environment:
       KAFKA_BROKER_ID: 3
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -97,6 +102,7 @@ services:
       KAFKA_SUPER_USERS: User:admin
 
       KAFKA_OPTS: "-Djava.security.auth.login.config=/etc/kafka/kafka_server_jaas.conf"
+      ZOOKEEPER_OPTS: "-Djava.security.auth.login.config=/etc/kafka/zookeeper_jaas.conf"
 
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
