--- a/l1/kafka/bt2/kafka_server_jaas.conf
+++ b/l1/kafka/bt2/kafka_server_jaas.conf
@@ -1,11 +1,13 @@
 KafkaServer {
-  org.apache.kafka.common.security.scram.ScramLoginModule required
+  org.apache.kafka.common.security.plain.PlainLoginModule required
   username="admin"
-  password="admin123";
+  password="admin-secret"
+  user_admin="admin-secret"
+  user_user1="user1-secret";
 };
 
 Client {
   org.apache.zookeeper.server.auth.DigestLoginModule required
-  username="admin"
-  password="admin123";
+  username="kafka"
+  password="kafka-secret";
 };
