--- a/l1/kafka/bt2/compose.yml
+++ b/l1/kafka/bt2/compose.yml
@@ -1,19 +1,20 @@
 
 services:
   zookeeper:
-    image: bitnami/zookeeper:3.9
+    image: confluentinc/cp-zookeeper:7.5.0
     container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+      ALLOW_ANONYMOUS_LOGIN: no
+      ZOO_ENABLE_AUTH: yes
+      ZOO_SERVER_USERS: kafka
+      ZOO_SERVER_PASSWORDS: kafka-secret
+      JVMFLAGS: -Djava.security.auth.login.config=/opt/bitnami/zookeeper/conf/zookeeper_jaas.conf
     ports:
       - "2181:2181"
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=no
-      - ZOO_ENABLE_AUTH=yes
-      - ZOO_SERVER_USERS=kafka
-      - ZOO_SERVER_PASSWORDS=kafka-secret
-      - JVMFLAGS=-Djava.security.auth.login.config=/opt/bitnami/zookeeper/conf/zookeeper_jaas.conf
     volumes:
       - ./zookeeper_jaas.conf:/opt/bitnami/zookeeper/conf/zookeeper_jaas.conf
-
 
   kafka1:
     image: confluentinc/cp-kafka:7.5.0
