--- a/l2/hadoop-cluster/ansible/inventory.ini
+++ b/l2/hadoop-cluster/ansible/inventory.ini
@@ -1,12 +1,9 @@
-
 [namenode]
-namenode ansible_host=34.101.132.186 private_ip=10.184.0.41
+namenode ansible_host=10.39.153.5 ansible_user=root
 
 [datanodes]
-datanode1 ansible_host=34.128.76.111 private_ip=10.184.0.39
-datanode2 ansible_host=34.101.234.37 private_ip=10.184.0.40
+datanode1 ansible_host=10.39.153.13 ansible_user=root
+datanode2 ansible_host=10.39.153.16 ansible_user=root
 
 [all:vars]
-ansible_user=root
-ansible_ssh_private_key_file=~/.ssh/id_rsa
-ansible_ssh_common_args="-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
