--- a/l2/hadoop-cluster/ansible/inventory.ini
+++ b/l2/hadoop-cluster/ansible/inventory.ini
@@ -6,4 +6,5 @@ datanode1 ansible_host=10.39.153.13 ansible_user=root
 datanode2 ansible_host=10.39.153.16 ansible_user=root
 
 [all:vars]
+ansible_port=2223
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
