--- a/l2/hadoop-cluster/ansible/inventory.ini
+++ b/l2/hadoop-cluster/ansible/inventory.ini
@@ -1,9 +1,9 @@
 [namenode]
-nn1 ansible_host=10.39.153.5 ansible_user=root
+nn1 ansible_host=10.39.153.13  private_ip=10.39.153.13 ansible_user=root
 
 [datanodes]
-dn1 ansible_host=10.39.153.13 ansible_user=root
-dn2 ansible_host=10.39.153.16 ansible_user=root
+dn1 ansible_host=10.39.153.10 private_ip=10.39.153.10 ansible_user=root
+dn2 ansible_host=10.39.153.11 private_ip=10.39.153.11 ansible_user=root
 
 [all:vars]
 ansible_port=2223
