--- a/l2/hadoop-cluster/ansible/inventory.ini
+++ b/l2/hadoop-cluster/ansible/inventory.ini
@@ -1,5 +1,5 @@
 [namenode]
-nn1 ansible_host=10.39.153.13  private_ip=10.39.153.13 ansible_user=root
+nn ansible_host=10.39.153.13  private_ip=10.39.153.13 ansible_user=root
 
 [datanodes] 
 dn1 ansible_host=10.39.153.10 private_ip=10.39.153.10 ansible_user=root
