--- a/l2/hadoop-cluster/ansible/inventory.ini
+++ b/l2/hadoop-cluster/ansible/inventory.ini
@@ -1,10 +1,12 @@
 [namenode]
-nn ansible_host=10.39.153.13  private_ip=10.39.153.13 ansible_user=root
+nn ansible_host=10.39.153.13  private_ip=10.39.153.13
 
 [datanodes] 
-dn1 ansible_host=10.39.153.10 private_ip=10.39.153.10 ansible_user=root
-dn2 ansible_host=10.39.153.11 private_ip=10.39.153.11 ansible_user=root
+dn1 ansible_host=10.39.153.10 private_ip=10.39.153.10
+dn2 ansible_host=10.39.153.11 private_ip=10.39.153.11
 
 [all:vars]
-ansible_port=2223
-ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+ansible_user=root
+ansible_ssh_private_key_file=~/.ssh/id_rsa
+ansible_ssh_common_args="-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
+port=2223
